<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_courseweb_app"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/etUserNameLogin"
            android:layout_width="250dp"
            android:hint="UserName"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="250dp"
            android:hint="Password"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/spinnerTypeLogin"
            android:layout_width="250dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vehicle"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cbCarLogin"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:text="Car"/>

        <CheckBox
            android:id="@+id/cbVanLogin"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:text="Van"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnInsertLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnUserListLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_list"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>



</LinearLayout>